--- a/Home.css
+++ b/Home.css
@@ -45,7 +45,6 @@
 }
 
 .u-section-1 .u-list-item-2 {
-  background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(41,44,51,0.4);
 }
 
@@ -70,7 +69,6 @@
 }
 
 .u-section-1 .u-list-item-3 {
-  background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(41,44,51,0.4);
 }
 
@@ -95,7 +93,6 @@
 }
 
 .u-section-1 .u-list-item-4 {
-  background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(41,44,51,0.4);
 }
 
@@ -965,7 +962,6 @@
   grid-template-columns: calc(33.3333% - 14px) calc(33.3333% - 14px) calc(33.3333% - 14px);
   min-height: 251px;
   grid-gap: 21px 21px;
-  grid-auto-columns: calc(33.3333% - 14px);
 }
 
 .u-section-5 .u-list-item-1 {
@@ -1111,11 +1107,6 @@
     min-height: 902px;
   }
 
-  .u-section-5 .u-repeater-1 {
-    grid-template-columns: repeat(3, calc(33.333333333333336% - 14px));
-    grid-auto-columns: calc(33.333333333333336% - 14px);
-  }
-
   .u-section-5 .u-container-layout-1 {
     padding-left: 20px;
     padding-right: 20px;
@@ -1162,9 +1153,8 @@
   }
 
   .u-section-5 .u-repeater-1 {
-    grid-template-columns: repeat(2, calc(50% - 10.5px));
+    grid-template-columns: calc(50% - 10.5px) calc(50% - 10.5px);
     min-height: 638px;
-    grid-auto-columns: calc(50% - 10.5px);
   }
 
   .u-section-5 .u-container-layout-1 {
@@ -1215,10 +1205,6 @@
     width: 540px;
   }
 
-  .u-section-5 .u-repeater-1 {
-    grid-auto-columns: calc(100% - 0px);
-  }
-
   .u-section-5 .u-container-layout-1 {
     padding-left: 20px;
     padding-right: 20px;
@@ -1260,7 +1246,6 @@
 
   .u-section-5 .u-repeater-1 {
     grid-template-columns: 100%;
-    grid-auto-columns: 100%;
   }
 
   .u-section-5 .u-container-layout-1 {
